package model;

public class ConfigParser {

}
