package model;

public class Event {
    // Será implementado futuramente
}
