package model;

public class FIFO implements Scheduler {

}
