package model;

public class GanttChart {

}
