package model;

public class PRIOP implements Scheduler {

}
