package model;

public class SRTF implements Scheduler {

}
