package model;

import java.util.List;

public interface Scheduler {

}
