package model;

public class SimulationConfig {

}
