package model;

public class SystemClock {

}
