package view;

public class UIConfigurator {

}
