package view;

public class UIResult {

}
